# MatterAio

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.integration.yml  pyproject.toml
.github/workflows/: ci.yml  package.yml  publish.yml
docs/: endpoints.md
docs/endpoints/: channels.md  files.md  posts.md  reactions.md  teams.md  users.md  websocket.md
src/matteraio/: __init__.py  _pagination.py  _paths.py  channels.py  client.py  config.py  events.py  exceptions.py  files.py  handlers.py  models.py  posts.py  reactions.py  teams.py  users.py  websocket.py
tests/: test_channels.py  test_client.py  test_config.py  test_files.py  test_handlers.py  test_posts.py  test_reactions.py  test_teams.py  test_users.py  test_websocket.py
tests/integration/: conftest.py  test_live_mattermost.py
