[project]
name = "matteraio"
version = "1.1.1"
description = "Async Python client for the Mattermost REST API and WebSocket events."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sergey" },
]
requires-python = ">=3.11"
keywords = [
    "api-client",
    "async",
    "mattermost",
    "sdk",
    "websocket",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "websockets>=16,<17",
]

[project.urls]
Homepage = "https://github.com/Sergeydmitr/MatterAio"
Issues = "https://github.com/Sergeydmitr/MatterAio/issues"
Repository = "https://github.com/Sergeydmitr/MatterAio"

[dependency-groups]
dev = [
    "mypy>=1.10,<2.0",
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=1.0,<2.0",
    "ruff>=0.11,<1.0",
]

[build-system]
requires = ["hatchling>=1.24,<2.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/AGENTS.md",
    "/docker-compose.integration.yml",
    "/tests",
    "/uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/matteraio"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live Mattermost server",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
